syntax = "proto3";
import "courses_types.proto";

service CourseService {
  rpc ListCourseTopics (courses.ListCourseTopicsRequest) returns (courses.ListCourseTopicsResponse);
  rpc GetCourseTopics (courses.GetCourseTopicsRequest) returns (courses.CourseTopicsResponse);
  rpc CreateCourseTopics (courses.CreateCourseTopicsRequest) returns (courses.CourseTopicsResponse);
}